fix(sheets): the text is aligned at editorial and non-editorial states (#1874)
* fix: cell text align between normal and edit mode

* fix: cell text align between normal and edit mode

* fix: unspecified follow the same rule as bottom

--- a/packages/sheets-ui/src/views/editor-container/index.module.less
+++ b/packages/sheets-ui/src/views/editor-container/index.module.less
@@ -11,6 +11,7 @@
 
     border: 1px solid rgb(var(--primary-color));
     box-shadow: none;
+    box-sizing: border-box;
 
     .editor-input {
         position: relative;
@@ -21,5 +22,11 @@
         height: 100%;
 
         background: white;
+
+        canvas {
+            position: absolute;
+            top: -1px !important;
+            left: -1px !important;
+        }
     }
 }
